# terraform_advisor_by_56k

./: .env.example  .gitignore  README.md  blog_post.md  pyproject.toml
blogpost/: blog_post.md
knowledge/questions/: AWS Well-Architected Tool Review Questions.txt  questions.txt
src/terraform_advisor_by_56k/: crew.py  main.py
src/terraform_advisor_by_56k/config/: agents.yaml  tasks.yaml
src/terraform_advisor_by_56k/tools/: __init__.py  memvid_tool.py
