[project]
name = "terraform_advisor_by_56k"
version = "0.1.0"
description = "terraform_advisor_by_56k using crewAI"
authors = [
    { name = "Roald Brunell", email = "roald@56k.cloud" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "boto3>=1.38.23",
    "crewai[tools]>=0.121.0,<1.0.0",
    "gitpython==3.1.38",
    "langchain-aws>=0.2.24",
    "memvid>=0.1.3",
    "pygithub==1.59.1",
    "qdrant-client>=1.14.2",
    "tiktoken>=0.9.0",
]

[project.scripts]
terraform_advisor_by_56k = "terraform_advisor_by_56k.main:run"
run_crew = "terraform_advisor_by_56k.main:run"
train = "terraform_advisor_by_56k.main:train"
replay = "terraform_advisor_by_56k.main:replay"
test = "terraform_advisor_by_56k.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
